src/Gramatyka/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Gramatyka/ParLatte.y
-----------------------------------------------------------------------------

state 137 contains 1 shift/reduce conflicts.

rule 45 is unused
rule 46 is unused
rule 47 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> 'class' Ident '{' ListClsBowel '}'       (6)
	TopDef -> 'class' Ident 'extends' Ident '{' ListClsBowel '}'   (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	Arg -> Type Ident                                  (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	ClsBowel -> Type ListIdent ';'                     (14)
	ClsBowel -> Type Ident '(' ListArg ')' Block       (15)
	ListClsBowel ->                                    (16)
	ListClsBowel -> ListClsBowel ClsBowel              (17)
	ListIdent ->                                       (18)
	ListIdent -> Ident                                 (19)
	ListIdent -> Ident ',' ListIdent                   (20)
	Block -> '{' ListStmt '}'                          (21)
	ListStmt ->                                        (22)
	ListStmt -> ListStmt Stmt                          (23)
	Stmt -> ';'                                        (24)
	Stmt -> Block                                      (25)
	Stmt -> Type ListItem ';'                          (26)
	Stmt -> Expr '=' Expr ';'                          (27)
	Stmt -> Expr '++' ';'                              (28)
	Stmt -> Expr '--' ';'                              (29)
	Stmt -> 'return' Expr ';'                          (30)
	Stmt -> 'return' ';'                               (31)
	Stmt -> 'if' '(' Expr ')' Stmt                     (32)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (33)
	Stmt -> 'while' '(' Expr ')' Stmt                  (34)
	Stmt -> Expr ';'                                   (35)
	Item -> Ident                                      (36)
	Item -> Ident '=' Expr                             (37)
	ListItem -> Item                                   (38)
	ListItem -> Item ',' ListItem                      (39)
	Type -> 'int'                                      (40)
	Type -> 'string'                                   (41)
	Type -> 'boolean'                                  (42)
	Type -> Ident                                      (43)
	Type -> 'void'                                     (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	Expr6 -> '(' Ident ')null'                         (48)
	Expr6 -> Ident                                     (49)
	Expr6 -> 'new' Ident                               (50)
	Expr6 -> Integer                                   (51)
	Expr6 -> 'true'                                    (52)
	Expr6 -> 'false'                                   (53)
	Expr6 -> Ident '(' ListExpr ')'                    (54)
	Expr6 -> String                                    (55)
	Expr6 -> '(' Expr ')'                              (56)
	Expr5 -> Expr5 '.' Ident                           (57)
	Expr5 -> Expr5 '.' Ident '(' ListExpr ')'          (58)
	Expr5 -> '-' Expr6                                 (59)
	Expr5 -> '!' Expr6                                 (60)
	Expr5 -> Expr6                                     (61)
	Expr4 -> Expr4 MulOp Expr5                         (62)
	Expr4 -> Expr5                                     (63)
	Expr3 -> Expr3 AddOp Expr4                         (64)
	Expr3 -> Expr4                                     (65)
	Expr2 -> Expr2 RelOp Expr3                         (66)
	Expr2 -> Expr3                                     (67)
	Expr1 -> Expr2 '&&' Expr1                          (68)
	Expr1 -> Expr2                                     (69)
	Expr -> Expr1 '||' Expr                            (70)
	Expr -> Expr1                                      (71)
	ListExpr ->                                        (72)
	ListExpr -> Expr                                   (73)
	ListExpr -> Expr ',' ListExpr                      (74)
	AddOp -> '+'                                       (75)
	AddOp -> '-'                                       (76)
	MulOp -> '*'                                       (77)
	MulOp -> '/'                                       (78)
	MulOp -> '%'                                       (79)
	RelOp -> '<'                                       (80)
	RelOp -> '<='                                      (81)
	RelOp -> '>'                                       (82)
	RelOp -> '>='                                      (83)
	RelOp -> '=='                                      (84)
	RelOp -> '!='                                      (85)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	')null'        { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'boolean'      { PT _ (TS _ 23) }
	'class'        { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'extends'      { PT _ (TS _ 26) }
	'false'        { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'new'          { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'void'         { PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ListTopDef      rules 8, 9
	Arg             rule  10
	ListArg         rules 11, 12, 13
	ClsBowel        rules 14, 15
	ListClsBowel    rules 16, 17
	ListIdent       rules 18, 19, 20
	Block           rule  21
	ListStmt        rules 22, 23
	Stmt            rules 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35
	Item            rules 36, 37
	ListItem        rules 38, 39
	Type            rules 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	Expr6           rules 48, 49, 50, 51, 52, 53, 54, 55, 56
	Expr5           rules 57, 58, 59, 60, 61
	Expr4           rules 62, 63
	Expr3           rules 64, 65
	Expr2           rules 66, 67
	Expr1           rules 68, 69
	Expr            rules 70, 71
	ListExpr        rules 72, 73, 74
	AddOp           rules 75, 76
	MulOp           rules 77, 78, 79
	RelOp           rules 80, 81, 82, 83, 84, 85

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	')null'        reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 43)

	';'            reduce using rule 43
	L_ident        reduce using rule 43


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 15
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 42)

	';'            reduce using rule 42
	L_ident        reduce using rule 42


State 9

	TopDef -> 'class' . Ident '{' ListClsBowel '}'      (rule 6)
	TopDef -> 'class' . Ident 'extends' Ident '{' ListClsBowel '}'    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 40)

	';'            reduce using rule 40
	L_ident        reduce using rule 40


State 11

	Type -> 'string' .                                  (rule 41)

	';'            reduce using rule 41
	L_ident        reduce using rule 41


State 12

	Type -> 'void' .                                    (rule 44)

	';'            reduce using rule 44
	L_ident        reduce using rule 44


State 13

	TopDef -> 'class' Ident . '{' ListClsBowel '}'      (rule 6)
	TopDef -> 'class' Ident . 'extends' Ident '{' ListClsBowel '}'    (rule 7)

	'extends'      shift, and enter state 17
	'{'            shift, and enter state 18


State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 16


State 15

	ListTopDef -> TopDef ListTopDef .                   (rule 9)

	%eof           reduce using rule 9


State 16

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 21
	ListArg        goto state 22
	Type           goto state 23

State 17

	TopDef -> 'class' Ident 'extends' . Ident '{' ListClsBowel '}'    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 20

State 18

	TopDef -> 'class' Ident '{' . ListClsBowel '}'      (rule 6)

	'boolean'      reduce using rule 16
	'int'          reduce using rule 16
	'string'       reduce using rule 16
	'void'         reduce using rule 16
	'}'            reduce using rule 16
	L_ident        reduce using rule 16

	ListClsBowel   goto state 19

State 19

	TopDef -> 'class' Ident '{' ListClsBowel . '}'      (rule 6)
	ListClsBowel -> ListClsBowel . ClsBowel             (rule 17)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            shift, and enter state 30
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClsBowel       goto state 28
	Type           goto state 29

State 20

	TopDef -> 'class' Ident 'extends' Ident . '{' ListClsBowel '}'    (rule 7)

	'{'            shift, and enter state 27


State 21

	ListArg -> Arg .                                    (rule 12)
	ListArg -> Arg . ',' ListArg                        (rule 13)

	')'            reduce using rule 12
	','            shift, and enter state 26


State 22

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 25


State 23

	Arg -> Type . Ident                                 (rule 10)

	L_ident        shift, and enter state 2

	Ident          goto state 24

State 24

	Arg -> Type Ident .                                 (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 25

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 36

	Block          goto state 35

State 26

	ListArg -> Arg ',' . ListArg                        (rule 13)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 21
	ListArg        goto state 34
	Type           goto state 23

State 27

	TopDef -> 'class' Ident 'extends' Ident '{' . ListClsBowel '}'    (rule 7)

	'boolean'      reduce using rule 16
	'int'          reduce using rule 16
	'string'       reduce using rule 16
	'void'         reduce using rule 16
	'}'            reduce using rule 16
	L_ident        reduce using rule 16

	ListClsBowel   goto state 33

State 28

	ListClsBowel -> ListClsBowel ClsBowel .             (rule 17)

	'boolean'      reduce using rule 17
	'int'          reduce using rule 17
	'string'       reduce using rule 17
	'void'         reduce using rule 17
	'}'            reduce using rule 17
	L_ident        reduce using rule 17


State 29

	ClsBowel -> Type . ListIdent ';'                    (rule 14)
	ClsBowel -> Type . Ident '(' ListArg ')' Block      (rule 15)

	';'            reduce using rule 18
	L_ident        shift, and enter state 2

	Ident          goto state 31
	ListIdent      goto state 32

State 30

	TopDef -> 'class' Ident '{' ListClsBowel '}' .      (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 31

	ClsBowel -> Type Ident . '(' ListArg ')' Block      (rule 15)
	ListIdent -> Ident .                                (rule 19)
	ListIdent -> Ident . ',' ListIdent                  (rule 20)

	'('            shift, and enter state 40
	','            shift, and enter state 41
	';'            reduce using rule 19


State 32

	ClsBowel -> Type ListIdent . ';'                    (rule 14)

	';'            shift, and enter state 39


State 33

	TopDef -> 'class' Ident 'extends' Ident '{' ListClsBowel . '}'    (rule 7)
	ListClsBowel -> ListClsBowel . ClsBowel             (rule 17)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            shift, and enter state 38
	L_ident        shift, and enter state 2

	Ident          goto state 3
	ClsBowel       goto state 28
	Type           goto state 29

State 34

	ListArg -> Arg ',' ListArg .                        (rule 13)

	')'            reduce using rule 13


State 35

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_ident        reduce using rule 5
	%eof           reduce using rule 5


State 36

	Block -> '{' . ListStmt '}'                         (rule 21)

	'!'            reduce using rule 22
	'('            reduce using rule 22
	'-'            reduce using rule 22
	';'            reduce using rule 22
	'boolean'      reduce using rule 22
	'false'        reduce using rule 22
	'if'           reduce using rule 22
	'int'          reduce using rule 22
	'new'          reduce using rule 22
	'return'       reduce using rule 22
	'string'       reduce using rule 22
	'true'         reduce using rule 22
	'void'         reduce using rule 22
	'while'        reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	L_ident        reduce using rule 22
	L_integ        reduce using rule 22
	L_quoted       reduce using rule 22

	ListStmt       goto state 37

State 37

	Block -> '{' ListStmt . '}'                         (rule 21)
	ListStmt -> ListStmt . Stmt                         (rule 23)

	'!'            shift, and enter state 58
	'('            shift, and enter state 59
	'-'            shift, and enter state 60
	';'            shift, and enter state 61
	'boolean'      shift, and enter state 8
	'false'        shift, and enter state 62
	'if'           shift, and enter state 63
	'int'          shift, and enter state 10
	'new'          shift, and enter state 64
	'return'       shift, and enter state 65
	'string'       shift, and enter state 11
	'true'         shift, and enter state 66
	'void'         shift, and enter state 12
	'while'        shift, and enter state 67
	'{'            shift, and enter state 36
	'}'            shift, and enter state 68
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 45
	Integer        goto state 46
	String         goto state 47
	Block          goto state 48
	Stmt           goto state 49
	Type           goto state 50
	Expr6          goto state 51
	Expr5          goto state 52
	Expr4          goto state 53
	Expr3          goto state 54
	Expr2          goto state 55
	Expr1          goto state 56
	Expr           goto state 57

State 38

	TopDef -> 'class' Ident 'extends' Ident '{' ListClsBowel '}' .    (rule 7)

	'boolean'      reduce using rule 7
	'class'        reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7
	'void'         reduce using rule 7
	L_ident        reduce using rule 7
	%eof           reduce using rule 7


State 39

	ClsBowel -> Type ListIdent ';' .                    (rule 14)

	'boolean'      reduce using rule 14
	'int'          reduce using rule 14
	'string'       reduce using rule 14
	'void'         reduce using rule 14
	'}'            reduce using rule 14
	L_ident        reduce using rule 14


State 40

	ClsBowel -> Type Ident '(' . ListArg ')' Block      (rule 15)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 21
	ListArg        goto state 44
	Type           goto state 23

State 41

	ListIdent -> Ident ',' . ListIdent                  (rule 20)

	';'            reduce using rule 18
	L_ident        shift, and enter state 2

	Ident          goto state 42
	ListIdent      goto state 43

State 42

	ListIdent -> Ident .                                (rule 19)
	ListIdent -> Ident . ',' ListIdent                  (rule 20)

	','            shift, and enter state 41
	';'            reduce using rule 19


State 43

	ListIdent -> Ident ',' ListIdent .                  (rule 20)

	';'            reduce using rule 20


State 44

	ClsBowel -> Type Ident '(' ListArg . ')' Block      (rule 15)

	')'            shift, and enter state 106


State 45

	Type -> Ident .                                     (rule 43)
	Expr6 -> Ident .                                    (rule 49)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 54)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	'('            shift, and enter state 105
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	'++'           reduce using rule 49
	'-'            reduce using rule 49
	'--'           reduce using rule 49
	'.'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'='            reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49
	L_ident        reduce using rule 43


State 46

	Expr6 -> Integer .                                  (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'++'           reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'--'           reduce using rule 51
	'.'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'='            reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'||'           reduce using rule 51


State 47

	Expr6 -> String .                                   (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'--'           reduce using rule 55
	'.'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'='            reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'||'           reduce using rule 55


State 48

	Stmt -> Block .                                     (rule 25)

	'!'            reduce using rule 25
	'('            reduce using rule 25
	'-'            reduce using rule 25
	';'            reduce using rule 25
	'boolean'      reduce using rule 25
	'else'         reduce using rule 25
	'false'        reduce using rule 25
	'if'           reduce using rule 25
	'int'          reduce using rule 25
	'new'          reduce using rule 25
	'return'       reduce using rule 25
	'string'       reduce using rule 25
	'true'         reduce using rule 25
	'void'         reduce using rule 25
	'while'        reduce using rule 25
	'{'            reduce using rule 25
	'}'            reduce using rule 25
	L_ident        reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25


State 49

	ListStmt -> ListStmt Stmt .                         (rule 23)

	'!'            reduce using rule 23
	'('            reduce using rule 23
	'-'            reduce using rule 23
	';'            reduce using rule 23
	'boolean'      reduce using rule 23
	'false'        reduce using rule 23
	'if'           reduce using rule 23
	'int'          reduce using rule 23
	'new'          reduce using rule 23
	'return'       reduce using rule 23
	'string'       reduce using rule 23
	'true'         reduce using rule 23
	'void'         reduce using rule 23
	'while'        reduce using rule 23
	'{'            reduce using rule 23
	'}'            reduce using rule 23
	L_ident        reduce using rule 23
	L_integ        reduce using rule 23
	L_quoted       reduce using rule 23


State 50

	Stmt -> Type . ListItem ';'                         (rule 26)

	L_ident        shift, and enter state 2

	Ident          goto state 102
	Item           goto state 103
	ListItem       goto state 104

State 51

	Expr5 -> Expr6 .                                    (rule 61)

	'!='           reduce using rule 61
	'%'            reduce using rule 61
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	'++'           reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'--'           reduce using rule 61
	'.'            reduce using rule 61
	'/'            reduce using rule 61
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'='            reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	'||'           reduce using rule 61


State 52

	Expr5 -> Expr5 . '.' Ident                          (rule 57)
	Expr5 -> Expr5 . '.' Ident '(' ListExpr ')'         (rule 58)
	Expr4 -> Expr5 .                                    (rule 63)

	'!='           reduce using rule 63
	'%'            reduce using rule 63
	'&&'           reduce using rule 63
	')'            reduce using rule 63
	'*'            reduce using rule 63
	'+'            reduce using rule 63
	'++'           reduce using rule 63
	','            reduce using rule 63
	'-'            reduce using rule 63
	'--'           reduce using rule 63
	'.'            shift, and enter state 101
	'/'            reduce using rule 63
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'='            reduce using rule 63
	'=='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'||'           reduce using rule 63


State 53

	Expr4 -> Expr4 . MulOp Expr5                        (rule 62)
	Expr3 -> Expr4 .                                    (rule 65)

	'!='           reduce using rule 65
	'%'            shift, and enter state 98
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            shift, and enter state 99
	'+'            reduce using rule 65
	'++'           reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'--'           reduce using rule 65
	'/'            shift, and enter state 100
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'='            reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'||'           reduce using rule 65

	MulOp          goto state 97

State 54

	Expr3 -> Expr3 . AddOp Expr4                        (rule 64)
	Expr2 -> Expr3 .                                    (rule 67)

	'!='           reduce using rule 67
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'+'            shift, and enter state 95
	'++'           reduce using rule 67
	','            reduce using rule 67
	'-'            shift, and enter state 96
	'--'           reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'='            reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'||'           reduce using rule 67

	AddOp          goto state 94

State 55

	Expr2 -> Expr2 . RelOp Expr3                        (rule 66)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 68)
	Expr1 -> Expr2 .                                    (rule 69)
